--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,23 @@
+.all {
+  height: 100vh;
+}
+
+.mid-margin {
+  margin: 0 30px;
+}
+
 .text-box {
   width: 100%;
-  height: 117px;
   /* UI Properties */
   text-align: center;
   font: italic normal bold 100px/100px Roboto Condensed;
   letter-spacing: 0px;
   color: #FFFFFF;
-  margin-top: 30.5px;
-
 }
 
 .left-border {
-  width: 116px;
-  height: 16px;
+  width: 90%;
+  height: 12px;
   background: #ED494C;
   transform: rotate(45deg);
   position: absolute;
@@ -23,8 +28,8 @@
 
 
 .right-border {
-  width: 116px;
-  height: 16px;
+  width: 90%;
+  height: 12px;
   background: #ED494C;
   transform: rotate(-45deg);
   position: absolute;
@@ -94,7 +99,7 @@
 
 .start {
   height: 540px;
-  max-width: 540px;
+  width: 540px;
   margin-top: 74px
 }
 
@@ -105,8 +110,48 @@
     max-width: 414px;
   }
 
-
+  .text-box {
+    font-size: 75px;
+  }
 }
+
+@media screen and (max-width: 375px) {
+
+  .start,
+  .start-btn {
+    max-width: 375px;
+  }
+
+  .mid-margin {
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 320px) {
+
+  .start,
+  .start-btn {
+    max-width: 320px;
+  }
+
+  .text-box {
+    font-size: 50px;
+  }
+
+  .mid-margin {
+    margin: 0;
+  }
+
+  .left-border,
+  .right-border,
+  .left-border-white,
+  .right-border-white,
+  .inside-right-border,
+  .inside-left-border {
+    left: 0;
+  }
+}
+
 
 .x-box {
   width: 64px;
@@ -264,7 +309,7 @@
     2px -2px 0 #fff,
     -2px 2px 0 #fff,
     2px 2px 0 #fff;
-    z-index: 100;
+  z-index: 100;
   margin-top: 52px;
 }
 
