--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
   width: 90%;
   height: 12px;
   background: #ED494C;
-  transform: rotate(45deg); 
+  transform: rotate(45deg);
   /* 長條旋轉排出X圖形 */
   position: absolute;
   top: 50%;
@@ -170,24 +170,31 @@
 .inside-border:nth-child(1),
 .inside-border:nth-child(2),
 .inside-border:nth-child(3) {
+  /* 第1 2 3拿掉上面border */
   border-top: none;
 }
 
 .inside-border:nth-child(1),
 .inside-border:nth-child(4),
 .inside-border:nth-child(7) {
+  /* 第1 4 7拿掉左邊border */
+
   border-left: none;
 }
 
 .inside-border:nth-child(3),
 .inside-border:nth-child(6),
 .inside-border:nth-child(9) {
+  /* 第3 6 9拿掉右邊border */
+
   border-right: none;
 }
 
 .inside-border:nth-child(7),
 .inside-border:nth-child(8),
 .inside-border:nth-child(9) {
+  /* 第7 8 9拿掉右邊border */
+
   border-bottom: none;
 }
 
@@ -269,6 +276,7 @@
   letter-spacing: 0px;
   color: #FF6D70;
   text-shadow:
+    /* 製作文字邊框 */
     -2px -2px 0 #fff,
     2px -2px 0 #fff,
     -2px 2px 0 #fff,
@@ -330,7 +338,7 @@
 }
 
 @media screen and (max-width: 414px) {
-  .all{
+  .all {
     height: auto;
   }
 
@@ -408,6 +416,7 @@
     right: 50%;
     height: 16px
   }
+
   .draw-image-o-outside {
     height: 180px;
     width: 180px;
@@ -433,19 +442,11 @@
     margin: 0;
   }
 
-  /* .left-border,
-  .right-border,
-  .left-border-white,
-  .right-border-white,
-  .inside-right-border,
-  .inside-left-border {
-    left: 0;
-  } */
-
   .game-zone {
     height: auto;
     margin-bottom: 160px;
   }
+
   .winner,
   .draw,
   .draw-box,
@@ -453,16 +454,18 @@
     width: 320px;
     font-size: 80px;
   }
-  
+
   .back-image-o {
     width: 320px;
   }
+
   .draw-box>.draw-image-x-left,
   .draw-box>.draw-image-x-right {
     width: 180px;
     right: 50%;
     height: 16px
   }
+
   .draw-image-o-outside {
     height: 150px;
     width: 150px;
@@ -471,10 +474,8 @@
     position: absolute;
     left: 50%
   }
-  .restart-btn{
+
+  .restart-btn {
     margin-top: 30px;
   }
-
-
-
 }
